#46 add logs (#47)
Co-authored-by: Jannis Mittenzwei <jannis.mittenzwei@exasol.com>